3.1.0: add `GronkExtension::export`.
- `export` handles adding exports to `javadoc` and `compileJava`.
- Add Dycon for lazy reflection constants.
- Add tests for `export`.
- Add utilities for converting arbitrary lamdas and `MethodHandle`s to
  `Closure`s.